# GregTech-Lite-Modpack-Downloader

./: .gitignore  LICENSE  README.md  index.html  install.ps1  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
